BE-87, feat : Modify "Completed" challenge controllers as is